# peak-mem

./: .build.yml  .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README  README.md  deny.toml
.builds/: archlinux.yml  debian.yml  freebsd.yml  lint.yml
.github/workflows/: ci.yml  release.yml  security.yml
man/man1/: peak-mem.1
src/: baseline.rs  cli.rs  main.rs  types.rs
src/monitor/: freebsd.rs  linux.rs  macos.rs  mod.rs  tracker.rs  windows.rs
src/output/: mod.rs
src/process/: mod.rs
tests/: baseline_integration.rs  cli.rs
