[package]
name = "peak-mem"
version = "0.1.0"
edition = "2021"
authors = ["Peak-mem Development Team"]
description = "Lightweight memory usage monitor for any process"
repository = "https://git.sr.ht/~charmitro/peak-mem"
license = "MIT OR Apache-2.0"
keywords = ["memory", "monitor", "profiling", "system", "performance"]
categories = ["command-line-utilities", "development-tools", "profiling"]

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
bytesize = "2.0.1"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.38", features = ["derive", "cargo", "wrap_help"] }
crossterm = "0.29.0"
csv = "1.3.1"
dirs = "5.0.1"
humantime = "2.2.0"
libc = "0.2.172"
nix = { version = "0.30.1", features = ["signal"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.17.0"

[target.'cfg(target_os = "macos")'.dependencies]
mach2 = "0.4.2"

[target."cfg(windows)".dependencies]
winapi = { version = "0.3.9", features = ["processthreadsapi", "psapi", "handleapi", "synchapi", "winbase", "minwindef", "winnt", "memoryapi"] }

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
tempfile = "3.20.0"
