[package]
name = "peak-mem"
version = "0.1.1"
edition = "2021"
authors = ["Peak-mem Development Team"]
description = "Lightweight memory usage monitor for any process"
repository = "https://git.sr.ht/~charmitro/peak-mem"
license = "MIT"
keywords = ["memory", "monitor", "profiling", "system", "performance"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "=1.0.95"
async-trait = "=0.1.83"
bytesize = "=1.3.0"
chrono = { version = "=0.4.39", features = ["serde"] }
clap = { version = "=4.5.23", features = ["derive", "cargo", "wrap_help"] }
crossterm = "=0.27.0"
csv = "=1.3.0"
dirs = "=5.0.1"
libc = "=0.2.169"
nix = { version = "=0.29.0", features = ["signal"] }
serde = { version = "=1.0.217", features = ["derive"] }
serde_json = "=1.0.139"
thiserror = "=2.0.11"
tokio = { version = "=1.43.1", features = ["full"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.17.0"

[target."cfg(windows)".dependencies]
winapi = { version = "0.3.9", features = ["processthreadsapi", "psapi", "handleapi", "synchapi", "winbase", "minwindef", "winnt", "memoryapi"] }

[target.'cfg(target_os = "freebsd")'.dependencies]
sysinfo = "=0.30.13"

[dev-dependencies]
assert_cmd = "=2.0.12"
predicates = "=3.1.0"
tempfile = "=3.15.0"
