[package]
name = "peak-mem"
version = "0.1.3"
edition = "2021"
authors = [
    "Charalampos Mitrodimas <charmitro@posteo.net>",
    "Panagiotis Foliadis <pfoliadis@posteo.net>",
]
description = "Lightweight memory usage monitor for any process"
repository = "https://git.sr.ht/~charmitro/peak-mem"
license = "MIT"
keywords = ["memory", "monitor", "profiling", "system", "performance"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "=4.5.23", features = ["derive", "cargo", "wrap_help"] }
crossterm = "=0.27.0"
libc = "=0.2.169"
nix = { version = "=0.29.0", features = ["signal"] }
serde = { version = "=1.0.217", features = ["derive"] }
serde_json = "=1.0.139"
tokio = { version = "=1.43.1", features = ["full"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.17.0"

[target.'cfg(target_os = "freebsd")'.dependencies]
sysinfo = "=0.30.13"


[dev-dependencies]
assert_cmd = "=2.0.12"
predicates = "=3.1.0"
tempfile = "=3.15.0"
